# programmator

./: .travis.yml  CMakeLists.txt  README.md  programmator_main.cpp
inc/: configuration.h  event.h  logger.h  place.h  screening.h
src/: CMakeLists.txt  configuration.cpp  event.cpp  logger.cpp  place.cpp  programmator_main.cpp  screening.cpp
test/: CMakeLists.txt  empty.cpp
